# AutoOpt

./: .gitignore  AutoOpt.m  README.md  pyproject.toml
AutoOptLib for Matlab/: AutoOpt.m
AutoOptLib for Octave/: AutoOpt.m
Components/: archive_best.m  archive_diversity.m  archive_statistic.m  archive_tabu.m  choose_brainstorm.m  choose_nich.m  choose_roulette_wheel.m  choose_tournament.m  choose_traverse.m  cross_arithmetic.m  cross_order_n.m  cross_order_two.m  cross_point_n.m  cross_point_one.m  cross_point_two.m  cross_point_uniform.m  cross_sim_binary.m  para_cma.m  para_pso.m  reinit_continuous.m  reinit_discrete.m  reinit_permutation.m  search_cma.m  search_de_current.m  search_de_current_best.m  search_de_random.m  search_eda.m  search_insert.m  search_mu_cauchy.m  search_mu_gaussian.m  search_mu_polynomial.m  search_mu_uniform.m  search_pso.m  search_reset_creep.m  search_reset_one.m  search_reset_rand.m  search_scramble.m  search_swap.m  search_swap_multi.m  update_always.m  (+4 more)
Operators/: archive_average.m  archive_best.m  archive_diversity.m  archive_tabu.m  choose_cluster.m  choose_roulette_wheel.m  choose_tournament.m  cross_arithmetic.m  cross_order_n.m  cross_order_two.m  cross_point_n.m  cross_point_one.m  cross_point_two.m  cross_point_uniform.m  cross_sim_binary.m  para_cma.m  para_pso.m  reinit_continuous.m  reinit_discrete.m  reinit_permutation.m  search_cma.m  search_de_current.m  search_de_current_best.m  search_de_random.m  search_eda.m  search_insert.m  search_mu_cauchy.m  search_mu_gaussian.m  search_mu_polynomial.m  search_mu_uniform.m  (+10 more)
(+1445 files in other folders)
